@@ -1,3 +1,9 @@
+2003-09-18  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-dialog.c, cong-dialog.h, cong-file-export.c, cong-file-properties.c, cong-menus.c, cong-node-properties-dialog.c
+
+	Packing fixes for CongDialog; a new tab in node properties dialog listing DTD attributes.
+	
 2003-09-15  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cursor.c
